Use imported Google font for caption

--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,10 @@ img {
     height: auto;
 }
 
+.new-caption {
+    font-family: 'IM Fell Great Primer', serif;
+}
+
 footer {
     display: flex;
     width: 100%;
